--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
 asgiref==3.8.1
+boto3==1.35.5
+botocore==1.35.5
 Django==5.1
+django-storages==1.14.4
 fontawesomefree==6.6.0
+jmespath==1.0.1
+python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.0.1
+s3transfer==0.10.2
+six==1.16.0
 sqlparse==0.5.1
 tzdata==2024.1
+urllib3==2.2.2
