--- a/portfolio/vercel.json
+++ b/portfolio/vercel.json
@@ -1,26 +1,24 @@
 {
+    "version": 2,
     "builds": [
       {
-        "src": "build_files.sh",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "staticfiles_build"
-        }
+        "src": "portfolio/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
       },
       {
-        "src": "/portfolio/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb" }
+        "src": "build_files.sh",
+        "use": "@vercel/static"
       }
     ],
     "routes": [
       {
-        "src": "/(.*)",
-        "dest": "portfolio/wsgi.py"
+        "src": "/staticfiles/(.*)",
+        "dest": "/staticfiles/$1"
       },
       {
-        "src": "/static/(.*)",
-        "dest": "/static/$1"
+        "src": "/(.*)",
+        "dest": "portfolio/wsgi.py"
       }
     ]
   }
