--- a/portfolio/vercel.json
+++ b/portfolio/vercel.json
@@ -2,15 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "portfolio/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+        "src": "index.html",
+        "use": "@vercel/static"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "portfolio/wsgi.py"
+        "dest": "index.html"
       }
     ]
   }
