--- a/portfolio/vercel.json
+++ b/portfolio/vercel.json
@@ -2,14 +2,15 @@
     "version": 2,
     "builds": [
       {
-        "src": "index.html",
-        "use": "@vercel/static"
+        "src": "portfolio/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "index.html"
+        "dest": "portfolio/wsgi.py"
       }
     ]
   }
