--- a/portfolio/vercel.json
+++ b/portfolio/vercel.json
@@ -5,9 +5,17 @@
         "src": "portfolio/wsgi.py",
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+      },
+      {
+        "src": "build_files.sh",
+        "use": "@vercel/static"
       }
     ],
     "routes": [
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
+      },
       {
         "src": "/(.*)",
         "dest": "portfolio/wsgi.py"
